[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.0.1"
dependencies = [
  "make87[zenoh]==0.1.0.dev10",
  "lerobot[async] @ git+https://github.com/huggingface/lerobot.git",
  "protobuf>=5.26.0"
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9,<3.13"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = []
