[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.0.1"
dependencies = [
  "make87[zenoh,protobuf]==0.1.0", 
  "lerobot[async,feetech,kinematics]==0.3.3",
  "protobuf>=5.26.0",
  "make87-messages-pb6",
  "yourdfpy"
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9,<3.13"

[tool.setuptools]
packages = ["app"]
package-data = { "app" = ["so101_new_calib.urdf", "assets/*.stl", "assets/*.part"] }

[project.optional-dependencies]
mcp_control = ["mcp"]
policy_control = []

# add package dataapp/so101_new_calib.urdf
